--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 
     compile 'com.facebook.fresco:fresco:1.0.1'
+
+    testCompile "org.robolectric:robolectric:3.0"
 }
